# libzt

./: .clang-format  .gitattributes  .gitignore  .gitmodules  API.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  FAQ.md  Jenkinsfile  LICENSE.txt  Makefile  Package.swift  README  README.md  RELEASE-NOTES.md  TESTING.md  build.ps1  build.sh  check.sh  clean.bat  dist.bat  dist.ps1  dist.sh  increment.sh  jenkinsfile  make-bsd.mk  make-freebsd.mk  make-liblwip.mk  make-liblwip141.mk  make-liblwip200.mk  make-libzt.mk  make-linux.mk  make-mac.mk  make-mac.mk.bak  makelib.bat  objects.mk  selftest.cpp  udp_client  version.rc.in  (+1 more)
.github/workflows/: aar.yaml  auto-format.yml  cmake.yml  jar.yaml  nuget.yml  selftest.yml  wheels.yml
api/: README.md
api/csharp/: README.md
api/go/: README.md
api/java/: README.md
attic/: SysUtils.cpp  SysUtils.h  Utilities.cpp  Utilities.h  VirtualSocket.cpp  VirtualSocket.h  VirtualSocketLayer.cpp  VirtualSocketLayer.h  ZT1Service.cpp  ZT1Service.h  ifaddrs.c  kq.c  kq.h  kq_old.c  libztJNI.cpp  picoTCP.h  ztproxy.c
attic/nodejs/: binding.cc  binding.gyp  package-lock.json  package.json  test.js
attic/objective-c/: adhoc.m
attic/swift/: main.swift
docs/: android.md  android_unity3d_zt_sdk.md  android_zt_sdk.md  api.md  api_discussion.md  apple_zt_sdk.md  docker.md  docker_linux_testing.md  docker_linux_zt_sdk.md  docker_zt_sdk.md  faq.md  gentle_intro.md  integrations.md  intro.md  ios.md  ios_unity3d_zt_sdk.md  ios_zt_sdk.md  limitations.md  linux_zt_sdk.md  osx.md  osx_unity3d.md  osx_unity3d_zt_sdk.md  osx_zt_sdk.md  rxtx.md  shims_zt_sdk.md  technical.md  testing.md  tests.md  todo.md  unity3d_ios_zt_sdk.md  unity3d_osx_zt_sdk.md  walkthrough.md  zt_llapi_unity.md  zt_sdk.md  zt_sdk_intro.md  zt_sdk_primer.md  ztsdk_network_stacks.md
examples/: README.md
examples/apple/: README.md
examples/c/: README.md  adhoc.c  callbackapi.c  centralapi.cpp  client.c  customroots.c  nonblockingclient.c  nonblockingserver.c  nostorage.c  pingable-node.c  server.c  statistics.c
examples/clojure/: README.md
examples/cpp/: adhoc.cpp  centralapi.cpp  client.cpp  comprehensive.cpp  dummy.cpp  earthtest.cpp  ip6.cpp  keymanagement.cpp  nonblockingclient.cpp  nonblockingserver.cpp  server.cpp  simple.cpp
examples/cpp_simple/: README.md
examples/cpp_vsproj_dll/: README.md
examples/csharp/: DotNetWrapper.cs  Makefile  Node.cs  README.md  Socket.cs  SocketException.cs  example.cs  zt_wrap.cxx
examples/csharp_vsproj_dll/: README.md  libztHelloWorld_csharp.sln
examples/java/: Example.java  ExampleApp.java  Makefile  README.md
examples/layer2/: layer2.cpp
examples/node/: .gitignore  auto.gypi  binding.cc  binding.gyp  libzt.js  package.json  stream_commons.js  test.js
examples/nodejs/: README.md  binding.cc  binding.gyp  libzt.js  package-lock.json
examples/objective-c/: adhoc.m
examples/python/: Makefile  README.md  example.py
ext/: THIRDPARTY.txt  ZeroTierOne.patch  lwip-contrib.patch  lwip.patch  lwipopts.h  patch_submodules.sh
include/: Constants.hpp  Debug.hpp  Defs.h  Defs.hpp  Platform.h  README.md  RingBuffer.h  ServiceControls.hpp  SysUtils.h  Utilities.h  VirtualBindingPair.h  VirtualSocket.h  VirtualSocketLayer.h  VirtualTap.h  VirtualTap.hpp  VirtualTapManager.hpp  Xcode-Bridging-Header.h  ZT1Service.h  ZeroTier.h  ZeroTierConstants.h  ZeroTierSDK.h  ZeroTierSockets.h  libzt.h  libztDebug.h  libztDefs.h  lwIP.h  lwIP.hpp  lwipopts.h  picoTCP.h  version.h
integrations/: README.md
pkg/: README.md
pkg/crate/libzt/: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  wrapper.h
pkg/crate/libzt/examples/: forwarding.rs
pkg/crate/libzt/src/: lib.rs  libzt.rs  node.rs  socket.rs  tcp.rs  udp.rs  utils.rs
pkg/crate/libzt/src/examples/: libzt-test-app.rs
pkg/crate/libzt/src/include/: ZeroTierSockets.h
pkg/pypi/: LICENSE  MANIFEST.in  README.md  build.py  build.sh  pyproject.toml  setup.cfg  setup.py
pkg/pypi/libzt/: __init__.py  version.py
ports/: clean.bat  dist.sh  module.modulemap  zt.i
prototypes/: fd.c
res/: libztdll.rc
src/: Central.cpp  Connection.hpp  Controls.cpp  Controls.hpp  Debug.hpp  Events.cpp  Events.hpp  ExampleStackDriver.cpp  NodeService.cpp  NodeService.hpp  Options.h  Platform.cpp  README.md  RPC.c  RingBuffer.cpp  RingBuffer.hpp  SDK.h  SDKService.cpp  SDK_Apple-Bridging-Header.h  SDK_Debug.c  SDK_Debug.h  SDK_DotNetWrapper.cs  SDK_EthernetTap.cpp  SDK_EthernetTap.hpp  SDK_Intercept.c  SDK_JNI_Java_Wapper.java  SDK_LWIPStack.hpp  SDK_LocalBuild.h  SDK_Proxy.cpp  SDK_RPC.c  SDK_RPC.h  SDK_Service.cpp  SDK_ServiceSetup.cpp  SDK_ServiceSetup.hpp  SDK_Signatures.h  SDK_Sockets.c  SDK_Utils.hpp  SDK_XcodeWrapper.cpp  SDK_XcodeWrapper.hpp  SDK_ZTAddress.java  (+52 more)
src/bindings/nodejs/: .eslintrc.json  .gitignore  CMakeLists.txt  README.md  a.out  binding.gyp  package-lock.json  package.json  test.c  test.js  tsconfig.debug.json  tsconfig.json
src/bindings/nodejs/src/: BsdRecv.h  Server.ts  Socket.ts  UDPSocket.ts  async.cc  asynclambda.h  binding.cc  index.ts  test.ts  zts.ts
src/bindings/nodejs/src/module/: Server.ts  Socket.ts  UDPSocket.ts  defs.ts  dgram.ts  net.ts  target-debug.d.ts  target-release.d.ts  zts.ts
src/bindings/nodejs/src/native/: async.cc  asynclambda.h  binding.cc  binding.cpp  impl.cpp  impl.h  lwip-macros.h  macros.h  tcp.cc  udp.cc
src/bindings/nodejs/src/test/: adhoc-test.ts  newtcptest.ts  newudptest.ts  tcp-example.ts  test.ts
test/: ExitTest.java  alice.conf  alice.sh  bob.conf  bob.sh  client.cpp  create_test_identities.sh  dummy.cpp  echo.cpp  echotest.cpp  error.cpp  example.cpp  generate_test_env.sh  layer2.cpp  sample.cpp  selftest-c-api.c  selftest.c  selftest.cpp  selftest.cs  selftest.java  selftest.py  server.cpp  simple.cpp  stop.sh  tcpserver6.cpp  test.conf  testhost1.conf  testhost2.conf  udpclient4.cpp  ztproxy.cpp  ztproxy.hpp
tests/: README.md  cleanup.sh  client.c  httpserver.js  server.c  tcp_client.c  tcp_server.c  test.sh  udp_client  udp_client.c  udp_server  udp_server.c
zerotierone/: make-linux.mk  make-mac.mk  one.cpp
(+787 files in other folders)
